--- a/css/chiu.css
+++ b/css/chiu.css
@@ -5,12 +5,11 @@
     font-family: Microsoft JhengHei;
 }
 
+/* 背景設置 */
 html {
     background-color: #0c1219;
     font-weight: 400;
     text-decoration: none;
-    /* background-color: #284d77; */
-    /* color: #eef2f7; */
 }
 
 nav {
@@ -23,21 +22,6 @@ nav {
     justify-content: start;
 }
 
-.nav-main {
-    width: 100%;
-    display: flex;
-    justify-content: end;
-    align-items: center;
-}
-
-.nav-logo {
-    margin: 13px 95px 0 10px;
-}
-
-.nav-logo-btn {
-    height: 50px;
-}
-
 /* footer 樣式 */
 footer p {
     background-color: #0c1219;
@@ -47,91 +31,6 @@ footer p {
     line-height: 12px;
     text-align: center;
     color: #eef2f7;
-}
-
-.main-menu {
-    display: none;
-    flex-wrap: nowrap;
-    justify-content: space-between;
-    align-items: center;
-}
-
-.main-menu-text {
-    flex-wrap: wrap;
-}
-
-.text-ch {
-    font-size: 14px;
-    display: flex;
-    flex-wrap: nowrap;
-}
-
-.text-en {
-    font-size: 12px;
-    display: flex;
-    flex-wrap: nowrap;
-}
-
-.about,
-.distribution,
-.classic,
-.media,
-.franchisee {
-    display: flex;
-    flex-wrap: nowrap;
-    padding: 8px 10px 10px 9px;
-    margin-right: 21px;
-    border: 2px solid transparent;
-    color: #eef2f7;
-}
-
-.about:hover,
-.distribution:hover,
-.classic:hover,
-.media:hover,
-.franchisee:hover {
-    flex-wrap: nowrap;
-    border: 2px solid #f7dc83;
-}
-
-.main-menu-about-gold, .main-menu-franchisee-gold, 
-.main-menu-media-gold, .main-menu-classic-gold, .main-menu-distribution-gold{
-    display: none;
-}
-
-/* .main-menu-about-gold:hover, .main-menu-franchisee-gold:hover, 
-.main-menu-media-gold:hover, .main-menu-classic-gold:hover, .main-menu-distribution-gold:hover{
-    display: flex;
-    z-index: 99;
-} */
-
-.main-menu-about-gold:hover{
-    background-image: url(./img/about-gold.png);
-    z-index: 99;
-}
-
-.main-menu-text:hover{
-    color: #f7dc83;
-}
-
-
-.main-menu-img {
-    margin-right: 5px;
-    justify-content: center;
-    align-items: center;
-}
-
-
-footer {
-    background-color: #0c1219;
-    height: 32px;
-    width: 100%;
-    position: fixed;
-    /* padding: 1px 0 1px 0; */
-    bottom: 0;
-}
-
-footer p {
     font-size: 12px;
     display: block;
     margin-block-start: 1em;
@@ -140,23 +39,222 @@ footer p {
     margin-inline-end: 0px;
 }
 
-.social-menu {
+footer {
+    background-color: #0c1219;
+    height: 32px;
+    width: 100%;
+    position: fixed;
+    bottom: 0;
+}
+
+
+/* nav樣式 */
+header .nav-main {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+/* nav-logo樣式 */
+header .nav-logo {
+    margin: 13px 95px 0 10px;
+}
+
+header .nav-logo-btn {
+    height: 50px;
+}
+
+header .main-menu {
+    display: none;
+    flex-wrap: nowrap;
+    justify-content: space-between;
+    align-items: center;
+}
+
+header .main-menu-text {
+    flex-wrap: wrap;
+    text-decoration: none;
+}
+
+header .text-ch {
+    font-size: 14px;
+    display: flex;
+    flex-wrap: nowrap;
+    text-decoration: none;
+}
+
+header .text-en {
+    font-size: 12px;
+    display: flex;
+    flex-wrap: nowrap;
+    text-decoration: none;
+}
+
+header .main-menu-distribution,
+header .main-menu-distribution-gold,
+header .main-menu-classic,
+header .main-menu-classic-gold,
+header .main-menu-media,
+header .main-menu-media-gold {
+    width: 36px;
+}
+
+header .main-menu-about,
+header .main-menu-about-gold,
+header .main-menu-franchisee,
+header .main-menu-franchisee-gold {
+    width: 32px;
+}
+
+
+header .about,
+header .distribution,
+header .classic,
+header .media,
+header .franchisee {
+    padding: 8px 10px 10px 9px;
+    margin-right: 21px;
+    border: 2px solid transparent;
+    color: #eef2f7;
+}
+
+header .about-link,
+header .distribution-link,
+header .classic-link,
+header .media-link,
+header .franchisee-link {
+    display: flex;
+    flex-wrap: nowrap;
+}
+
+header .about:hover,
+header .distribution:hover,
+header .classic:hover,
+header .media:hover,
+header .franchisee:hover {
+    flex-wrap: nowrap;
+    border: 2px solid #f7dc83;
+    color: #f7dc83;
+}
+
+header .menu-about,
+header .menu-distribution,
+header .menu-classic,
+header .menu-media,
+header .menu-franchisee {
+    width: 100%;
+    display: flex;
+    flex-wrap: nowrap;
+    padding: 8px 0 10px 0;
+    /* margin-right: 21px; */
+    border: 2px solid transparent;
+    color: #eef2f7;
+}
+
+header .menu-about a,
+header .menu-distribution a,
+header .menu-classic a,
+header .menu-media a,
+header .menu-franchisee a {
+    display: flex;
+}
+
+header .menu-about:hover,
+header .menu-distribution:hover,
+header .menu-classic:hover,
+header .menu-media:hover,
+header .menu-franchisee:hover {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    border: 2px solid #f7dc83;
+    color: #f7dc83;
+}
+
+header .main-menu-text:hover {
+    color: #f7dc83;
+    text-decoration: none;
+}
+
+header .main-menu-about-gold,
+header .main-menu-franchisee-gold,
+header .main-menu-media-gold,
+header .main-menu-classic-gold,
+header .main-menu-distribution-gold {
+    display: none;
+}
+
+header .about:hover .main-menu-about {
+    display: none;
+}
+
+header .about:hover .main-menu-about-gold {
+    display: block;
+}
+
+header .distribution:hover .main-menu-distribution {
+    display: none;
+}
+
+header .distribution:hover .main-menu-distribution-gold {
+    display: block;
+}
+
+header .classic:hover .main-menu-classic {
+    display: none;
+}
+
+header .classic:hover .main-menu-classic-gold {
+    display: block;
+}
+
+header .media:hover .main-menu-media {
+    display: none;
+}
+
+header .media:hover .main-menu-media-gold {
+    display: block;
+}
+
+.franchisee:hover .main-menu-franchisee {
+    display: none;
+}
+
+header .franchisee:hover .main-menu-franchisee-gold {
+    display: block;
+}
+
+header .main-menu-img {
+    margin-right: 5px;
+    justify-content: center;
+    align-items: center;
+}
+
+header .social-menu {
     display: none;
     align-items: center;
 }
 
-.social-menu-icon-fb {
+header img.social-menu-icon-fb {
+    height: 25px;
     margin-right: 11px;
 }
 
-.social-menu-icon {
+header img.social-menu-icon-ig {
+    height: 25px;
+}
+
+header .mine-menu-btn {
+    width: 100%;
     display: flex;
-    /* margin-right: 15px; */
+    align-items: center;
+    justify-content: space-between;
 }
 
 /* 下拉選單CSS */
 
-.language-menu {
+header .language-menu {
     margin-right: 39px;
     /* 53px 加拉條 */
     list-style: none;
@@ -165,22 +263,28 @@ footer p {
     display: flex;
 }
 
-.language-position{
+header .language-position {
     position: relative;
 }
 
-.drop-down-menu {
+header .drop-down-menu {
     text-decoration: none;
 }
 
-.drop-down-menu-sub {
+header .drop-down-menu-sub {
     text-decoration: none;
     position: absolute;
     position: relative;
-    top: 9px;
+    top: 10px;
+    display: none;
 }
 
-.drop-down-menu a{
+header .language-position:hover .drop-down-menu-sub {
+    display: block;
+    /* transform: translate(0, -100%); */
+}
+
+header .drop-down-menu a {
     position: relative;
     width: 160px;
     height: 45px;
@@ -193,34 +297,12 @@ footer p {
     list-style: none;
 }
 
-/* ul.dropdown-content{
-    top: 50px;
-    width: 160px;
-    height: 45px;
-    font-size: 14px;
-    padding: 11px 25px 11px 25px;
-    text-decoration: none;
-    list-style: none;
-} */
-
-/* ul.drop-down-menu a {
-    position: absolute;
-    align-items: center;
-    justify-content: center;
-    white-space: nowrap;
-} */
-
-/* .dropdown-content{
-    display: none;
-} */
-
-.dropdown-content-ch,
-.dropdown-content-en{
+header .dropdown-content-ch,
+header .dropdown-content-en {
     position: absolute;
     width: 100%;
     height: 45px;
     padding: 11px 25px 11px 25px;
-    color: white;
     font-size: 14px;
     letter-spacing: 2px;
     text-decoration: none;
@@ -228,113 +310,129 @@ footer p {
     list-style: none;
 }
 
-.dropdown-content-en{
+header .dropdown-content-en {
     top: 45px;
 }
 
-.dropdown-content-ch a,
-.dropdown-content-en a{
-color: white;
-text-align: center;
-text-decoration: none;
-}
-
-
-.dropdown-content{
+header .dropdown-content-ch a,
+header .dropdown-content-en a {
+    color: white;
     text-align: center;
+    text-decoration: none;
+}
+
+header .dropdown-content-ch a:hover,
+header .dropdown-content-en a:hover {
+    color: #000000;
+}
+
+header .dropdown-content-ch:hover {
+    background-color: #ffe282;
+    text-decoration: none;
+}
+
+header .dropdown-content-en:hover {
+    background-color: #ffe282;
+    text-decoration: none;
+}
+
+header .dropdown-content {
+    text-align: center;
+    text-decoration: none;
 }
 
 
-.social-menu-main {
+header .social-menu-main {
     display: flex;
     margin: 0 40px 0 0;
     justify-content: space-between;
 }
 
 
-.menu-btn-about:hover,
-.menu-btn-distribution:hover,
-.menu-btn-classic:hover,
-.menu-btn-media:hover,
-.menu-btn-franchisee:hover {
+header .menu-btn-about:hover,
+header .menu-btn-distribution:hover,
+header .menu-btn-classic:hover,
+header .menu-btn-media:hover,
+header .menu-btn-franchisee:hover {
     flex-wrap: nowrap;
     border: 2px solid #f7dc83;
-    /* padding: 5px 10px; */
     color: #ffe282;
 }
 
-.dropdown-content.dropdown-content-ch:hover {
-    background-color: #ffe282;
-    color: #000000;
-    text-decoration: none;
+
+
+header .jing-section-btn {
+    width: 25px;
+    height: 20px;
 }
 
-.dropdown-content.dropdown-content-en:hover {
-    background-color: #ffe282;
-    color: #000000;
-    text-decoration: none;
-}
-
-.jing-section {
+header .jing-section {
     height: 37px;
-    border: 0.5px solid white;
-    border-radius: 2px;
-    padding: 5px;
+    border: 1px solid #252a30;
+    border-radius: 3px;
+    padding: 8px;
     margin-right: 10px;
+    margin-top: 15px;
+    display: flex;
 }
 
-div .nav-ham{
+header .nav-ham {
+    width: 100%;
     position: relative;
 }
-.container {
+
+header .container {
     position: absolute;
-    display: none;
+    display: flex;
     top: 76px;
+    width: 100%;
+    height: 50vh;
 }
 
 
 /* 秋 top 按鈕 */
-body .go-to-top-container {
+header .go-to-top-container {
     position: fixed;
     right: 2%;
     bottom: 40px;
     z-index: 5;
 }
 
-body .go-to-top-container .go-to-top {
+header .go-to-top-container .go-to-top {
     width: 71px;
     height: 71px;
 }
 
 /* 秋 選單紀錄 按鈕 */
 
-body .shop-cart-container{
+header .shop-cart-container {
     position: fixed;
     bottom: 50%;
     right: 2%;
 }
-.shop-cart-container .shop-cart {
+
+header .shop-cart-container .shop-cart {
     position: relative;
     right: 2%;
     width: 60px;
     height: 60px;
 }
 
-body .shop-cart-container .shop-cart-amount-area {
+header .shop-cart-container .shop-cart-amount-area {
     position: absolute;
     bottom: 60%;
     right: 40px;
 }
 
-body .shop-cart-container .shop-cart-amount-area .shop-cart-amount {
+header .shop-cart-container .shop-cart-amount-area .shop-cart-amount {
     width: 30px;
     height: 30px;
     z-index: 100;
 }
 
-body .shop-cart-container .shop-cart-amount-area .shop-cart-number {
+header .shop-cart-container .shop-cart-amount-area .shop-cart-number {
     position: absolute;
-    top: 25%;
+    top: 20%;
     left: 40%;
     color: #000000;
     font-size: 12px;
@@ -343,102 +441,78 @@ body .shop-cart-container .shop-cart-amount-area .shop-cart-number {
 }
 
 /* lan swrip 效果 */
-
-div .swiper-slide {
+header .swiper-slide {
     display: flex;
     flex-grow: 2;
     width: 158px;
     border: 1px solid #ffffff;
 }
 
-div .social-menu-icon {
+header .social-menu-icon {
     display: flex;
-    justify-content: space-between;
-    /* flex-direction:row; */
+    justify-content: end;
+    /* margin-left: 90%; */
 }
 
+header .main-menu-text-ch {
+    display: flex;
+    color: #eef2f7;
+    text-decoration: none;
+}
+
+header .main-menu-text-ch:hover {
+    color: #f7dc83;
+    text-decoration: none;
+}
+
+header .main-menu-text-en {
+    color: #eef2f7;
+    text-decoration: none;
+}
+
+header .main-menu-text-en:hover {
+    color: #f7dc83;
+    text-decoration: none;
+}
+
+header .mine-menu {
+    width: 100%;
+    /* display: flex; */
+    flex-direction: column;
+    /* flex-wrap: nowrap; */
+    justify-content: start;
+    align-items: center;
+}
+
+header .swiper-container {
+    width: 158px;
+    background-color: #eef2f7;
+}
+
+:any-link {
+    text-decoration: none;
+}
 
 /* 漢堡條css */
 @media screen and (min-width: 1465px) {
 
-    .main-menu {
-        display: flex;
+    nav {
+        position: relative;
     }
 
-    .social-menu {
-        display: flex;
-    }
-
-    /* .language-menu {
-        display: flex;
-    } */
-
-    .jing-section{
-        display: none;
-        align-items: center;
-        /* height: 37px; */
-        border: 0.5px solid white;
-        border-radius: 2px;
-        padding: 5px;
-        /* margin: 20px 10px 10px 0; */
-    }
-
-    .jing-section-btn{
-        width: 41px;
-        height: 25px;
-    }
-
-    .container {
+    header .jing-section {
         display: none;
     }
-    
-    .nav-main{
-        justify-content: space-between;
-    }
 
-
-    .ham-menu-btn {
-        background-image: url(./img/navm-enu-list.png);
-        width: 53px;
-        height: 37px;
-        align-items: center;
-        justify-content: center;
-
-    }
-
-    .about-img {
-        /* background-image: url(./img/about.png); */
-        width: 32px;
-    }
-
-    .distribution-img {
-        /* background-image: url(./img/distribution.png); */
-        width: 32px;
-    }
-
-    .classic-img {
-        /* background-image: url(./img/classic.png); */
-        width: 32px;
-    }
-
-    .media-img {
-        /* background-image: url(./img/media.png); */
-        width: 32px;
-    }
-
-    .franchisee-img {
-        /* background-image: url(./img/franchisee.png); */
-        width: 32px;
-    }
-
-    .container a {
+    header .main-menu {
         display: flex;
-        flex-wrap: nowrap;
-        margin: 8px 8px;
-        /* padding: 2px 5px 6px; */
     }
-    
-    .container .nav .menu {
+
+    header .social-menu {
+        display: flex;
+    }
+
+    header .container {
         position: fixed;
         top: 0;
         left: 0;
@@ -451,55 +525,37 @@ div .social-menu-icon {
         transform: translate(0, -100%);
         transition: 0.3s ease;
         color: #eef2f7;
-    }
-    
-    nav {
-        position: relative;
-    }
-    
-    .container .nav .menu.show {
+        display: none;
         top: 76px;
-        transform: translate(0, 0);
     }
-    
-    .container .nav .menu .menu-btn {
+
+    header .container .nav .menu .menu-btn {
         border-bottom: 1px solid black;
         padding: 9px;
         text-align: center;
     }
-    
-    button .menu-btn {
+
+    header .menu-btn {
         text-align: center;
         border: 1px solid #ffffff;
         border-radius: 10px;
         z-index: 9;
     }
-    
-    div .main-menu-text {
+
+    header .main-menu-text {
         color: #eef2f7;
     }
-    
-    .menu-btn {
+
+    header .menu-btn {
         justify-content: space-between;
     }
-    
-    .menu-btn a {
-        /* line-height: 40px; */
-        text-decoration: none;
-        color: rgb(255, 255, 255);
-        font-size: 14px;
-    }
-    
-    .menu-btn a:hover {
+
+    header .menu-btn a:hover {
         color: #ffe282;
         font-size: 30px;
     }
 
-    .container {
-        position: absolute;
-        display: none;
-        top: 76px;
-    }
-    
-    
+
+
+
 }
